# cracode

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cifuzz.yml  cross_platform.yml  fuzz.yml  release.yml  rust.yml
benches/: inline.rs  string.rs  varint.rs
derive/: Cargo.toml  README.md
derive/src/: attribute.rs  derive_enum.rs  derive_struct.rs  lib.rs
docs/: migration_guide.md  spec.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compat.rs  roundtrip.rs
src/: config.rs  error.rs  lib.rs
src/de/: decoder.rs  impl_core.rs  impls.rs  mod.rs  read.rs
src/enc/: encoder.rs  impls.rs  mod.rs  write.rs
src/features/: derive.rs  impl_std.rs
src/features/serde/: de_owned.rs  mod.rs  ser.rs
src/varint/: decode_signed.rs  decode_unsigned.rs  encode_signed.rs  encode_unsigned.rs
tests/: alloc.rs  basic_types.rs  context.rs  derive.rs  derive_rename.rs  error_size.rs  serde.rs  std.rs  utils.rs
tests/issues/: issue_427.rs  issue_431.rs  issue_459.rs  issue_467.rs  issue_474.rs  issue_498.rs  issue_500.rs  issue_523.rs  issue_537.rs  issue_547.rs  issue_570.rs  issue_592.rs  issue_614.rs
